Use of sequelize on backend.

--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,10 @@
-<html>
-  <head>
-    <title>Chat Application</title>
-  </head>
-  <body>
-    
-    {{ 1 + 1 }}
-    <script src="jspm_packages/system.js"></script>
-    <script src="config.js"></script>
-    <script>
-      System.import('app.js')
-    </script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+test
+</body>
 </html>
