Some theming and comments.

--- a/server/app/index.html
+++ b/server/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="chatApp">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title ng-bind="$root.page_title + ' | ChatApp'">ChatApp</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
